VideoEmbedLink: fix styles on mobile

--- a/src/views/VideoEmbedLink.scss
+++ b/src/views/VideoEmbedLink.scss
@@ -3,6 +3,7 @@
 .video-link {
   width: 100%;
   height: 100%;
+  min-height: 15rem;
   &::before {
     content: "";
     position: absolute;
